# loguinho

./: .gitignore  Cargo.toml  README.md  build_choco.bat
choco/: loguinho.nuspec
choco/tools/: LICENSE.txt  VERIFICATION.txt
src/: helpers.rs  main.rs  pretty_print.rs  watch.rs
