[package]
name = "loguinho"
version = "0.0.4"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
smol = { version = "0.3.3", features = ["tokio02"] }
rusoto_core = { version="0.45.0", default_features=false, features=["rustls"] }
rusoto_logs = { version="0.45.0", default_features=false, features=["rustls"] }
clap = "3.0.0-beta.1"
chrono = "0.4"
colored = "2.0.0"